feat(atom): improved search readability

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -48,9 +48,18 @@ atom-text-editor.editor .syntax--comment {
 
 // Search files
 
+.results-view-container {
+    font-size: 16px;
+}
+
 .results-view-container .path-row {
     background-color: #f5f8ff;
     font-style: italic;
+}
+
+.results-view-container li.match-row  {
+    position: relative;
+    left: 10px;
 }
 
 .results-view-container .list-item.selected::before {
