style(atom): highlight-selected style

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -53,7 +53,7 @@ atom-text-editor.editor .syntax--comment {
 }
 
 .results-view-container .path-row {
-    background-color: #f5f8ff;
+    // background-color: #f5f8ff;
     font-style: italic;
 }
 
@@ -64,4 +64,31 @@ atom-text-editor.editor .syntax--comment {
 
 .results-view-container .list-item.selected::before {
     background-color: transparent;
+}
+
+// Highlight current selection
+// (highlight-selected package)
+
+atom-text-editor .highlights {
+  // Dark theme box
+  .highlight-selected .region {
+    // Subtle highlight
+    border: none;
+    // border-color: #d9d1a3;
+    // border-radius: 3px;
+    // border-width: 1px;
+    // border-style: solid;
+  }
+  // Dark theme background (set in settings)
+  .highlight-selected.background .region {
+    background-color: rgba(217, 209, 163, 0.15);
+  }
+  // Light theme box (set in settings)
+  .highlight-selected.light-theme .region {
+    border-color: rgba(217, 209, 163, 0.4);
+  }
+  // Light theme background (set in settings)
+  .highlight-selected.light-theme.background .region {
+    background-color: rgba(217, 209, 163, 0.2);
+  }
 }
